--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "npm run coverage",
     "posttest": "npm run lint:coverage",
     "coverage": "nyc node test.js",
-    "lint:coverage": "nyc check-coverage --lines 0 --branches 0 --statements 0 --functions 0",
+    "lint:coverage": "nyc check-coverage --lines 100 --branches 100 --statements 100 --functions 100",
     "report-coverage": "nyc report --reporter=text-lcov | coveralls",
     "prerelease": "npm test",
     "release": "standard-version --sign --no-verify",
@@ -27,6 +27,7 @@
     "commitizen": "^2.9.2",
     "coveralls": "^2.11.15",
     "cz-conventional-changelog": "^1.2.0",
+    "fs-exists-sync": "^0.1.0",
     "mukla": "^0.4.8",
     "nyc": "^10.0.0",
     "pre-commit": "^1.2.2",
