docs(api): update usage docs

--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
+  "engines": {
+    "node": ">=4",
+    "npm": ">=2"
+  },
   "verb": {
     "run": true,
     "toc": {
@@ -73,12 +77,15 @@
       "list": [
         "always-done",
         "minibase",
-        "try-catch-core"
+        "try-catch-core",
+        "start",
+        "start-files",
+        "start-clean",
+        "start-write",
+        "start-babel",
+        "start-pretty-reporter"
       ],
       "highlight": "always-done"
-    },
-    "lint": {
-      "reflinks": true
     },
     "reflinks": [
       "always-done",
@@ -93,10 +100,9 @@
       "start",
       "verb",
       "verb-generate-readme"
-    ]
-  },
-  "engines": {
-    "node": ">=4",
-    "npm": ">=2"
+    ],
+    "lint": {
+      "reflinks": true
+    }
   }
 }
