--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mukla": "^0.4.8",
     "nyc": "^10.0.0",
     "pre-commit": "^1.2.2",
+    "rollup-plugin-buble": "^0.15.0",
     "standard": "^8.6.0",
     "standard-version": "^4.0.0"
   },
