--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ node_js:
   - "6"
   - "4"
 
+matrix:
+  fast_finish: true
+  allow_failures:
+    - node_js: "4"
+
 notifications:
   email: false
 
