--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,10 @@ environment:
     - nodejs_version: "6"
     - nodejs_version: "4"
 
+matrix:
+  allow_failures:
+    - nodejs_version: "4"
+
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
